--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
       }
     ],
     "quotes": ["error", "single"],
+    "react/prop-types": "off",
     "semi": ["error", "always"],
     "space-in-parens": ["error"],
     "space-infix-ops": "error",
